Fix problem with the visibility of the result in mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -283,6 +283,6 @@ footer {
 
 @media (max-width: 640px) {
   footer {
-    bottom: 20%;
+    bottom: 5%;
   }
 }
